--- a/environment.yml
+++ b/environment.yml
@@ -20,6 +20,7 @@ dependencies:
   - pip:
     - pandas
     - bokeh
+    - xlrd
     - numpy
     - pgcontents
     - git+git://github.com/ipython-contrib/jupyter_contrib_nbextensions.git
